--- a/circle/html/index.html
+++ b/circle/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Circle Detection v0.1.2</title>
+<title>Circle Detection v0.1.3</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
 <link href="rect.css" rel="stylesheet" type="text/css">
@@ -46,7 +46,7 @@ body.loading .modal {
 <body>
 <div class="container">
 	<div class="jumbotron">
-    	<h3>Circle Detection</h3> 
+    	<h3>Circle Detection v0.1.3</h3> 
     	<p>This is a prototype of Circle Detection</p> 
   	</div>
   	
@@ -315,6 +315,8 @@ let gb_count=0 ;
 let Img_scale = 1.0;
 let zoom_factor = 1.0;
 let dsp_org = null;
+let last_processing_time = 0;
+
 
 imgElement.onload = function() {
   /*src = cv.imread(imgElement);
@@ -350,6 +352,11 @@ imgElement.onload = function() {
   zoom_factor = dst_org.size().width/imgElement.style.width;
 
   rectROI = new cv.Rect(0,0,dst_org.size().width,dst_org.size().height);
+  imageCanvas.widht = 50;
+  imageCanvas.height = 50;
+  let ctext = imageCanvas.getContext('2d');
+  ctext.clearRect(0,0,imageCanvas.width,imageCanvas.height);
+  	
 
   initDraw(document.getElementById('inputCanvas'));
 
@@ -482,13 +489,14 @@ function DrawCircles(src,circles){
 	var n = date.toDateString();
 	// get the time as a string
 	var time = date.toLocaleTimeString();
+	 	
 
         let pos1 = new cv.Point(10,20);
 	let pos2 = new cv.Point(10,40);
         let pos3 = new cv.Point(10,60);
 
         cv.putText(dst ,"Count : "+ String (cnt), pos1,cv.FONT_HERSHEY_SIMPLEX,disp_fontsize,[0,0,255,255],1);
-        cv.putText(dst ,"Date/Time : " + n + "--"+time, pos2,cv.FONT_HERSHEY_SIMPLEX,disp_fontsize*0.75,[0,0,0,255],1);
+        cv.putText(dst ,"Date/Time : " + n + "--"+time + " (" + last_processing_time.toFixed(2) + " sec.)", pos2,cv.FONT_HERSHEY_SIMPLEX,disp_fontsize*0.75,[0,0,0,255],1);
 	cv.putText(dst ,"Comment : "+ txt_Comment, pos3 ,cv.FONT_HERSHEY_SIMPLEX,disp_fontsize*0.75,[0,0,0,255],1);
 
 	cv.imshow('imageCanvas', dst);
@@ -497,8 +505,19 @@ function DrawCircles(src,circles){
 }
 
 document.getElementById('circlesButton').onclick = function() {
-	this.disabled = true;
+	
+	//this.disabled = true;
+	document.getElementById('circlesButton').disabled = true;
+	document.getElementById('lbl_status').innerHTML = "<span style='color:#FF0000'> Processing...</span>";
+	imageCanvas.style.cursor="progress";
+	setTimeout(function(){ processCircleDetection(); }, 10);
+}
 
+function processCircleDetection()
+
+{
+
+	let t0 = performance.now();
 
 	//reset array Circles
 	arrCircles = [];
@@ -564,7 +583,7 @@ document.getElementById('circlesButton').onclick = function() {
                 1, minDist,  param1,param2, minRas, maxRas);
 
 	document.getElementById('circlesButton').disabled = true;
-	document.getElementById('lbl_status').innerHTML = "Processing...";
+	//document.getElementById('lbl_status').innerHTML = "Processing...";
 	//document.getElementById("imageCanvas").style.cursor="crosshair";
 	
 	for (let i = 0; i < circles.cols; i++){
@@ -578,6 +597,10 @@ document.getElementById('circlesButton').onclick = function() {
 		arrCircles.push(circle);
 	}
 
+	let t1 = performance.now();
+
+	last_processing_time = (t1-t0)/1000; //in sec.
+ 
 	// draw circles
 	DrawCircles(dsp_org.roi(rectROI),arrCircles);	
 
@@ -602,11 +625,14 @@ document.getElementById('circlesButton').onclick = function() {
 	*/
 	document.getElementById('circlesButton').disabled = false;
 	document.getElementById('lbl_status').innerHTML = "Ready";
-
+	document.getElementById("imageCanvas").style.cursor="pointer";
+	
 	mat.delete();
 	circles.delete();
+
+
 	//frame.delete();
-	this.disabled = false;
+	//this.disabled = false;
 
 };
 
