--- a/circle/html/index.html
+++ b/circle/html/index.html
@@ -6,8 +6,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
 
-
-
 <style type="text/css">
 	/* Start by setting display:none to make this hidden.
    Then we position it in relation to the viewport window
@@ -44,127 +42,128 @@ body.loading .modal {
 </style>
 </head>
 <body>
-<div class="container">
-	<div class="jumbotron">
-    	<h3>Circle Detection v0.1.3</h3> 
-    	<p>This is a prototype of Circle Detection</p> 
-  	</div>
-  	
-  	<div class="row">
-  	</div>
-	<div class="row">
-  		<div class="col-sm">
-  			<div class="card">
-				<div id="navbar">
-					<button type="button" onclick="Img_zoomin()"><img src="./images/zoomin.png" width="50%" height="50%"  /></button>
-					<button type="button" onclick="Img_zoomout()"><img src="./images/zoomout.png" width="50%" height="50%" /></button>
-				</div>
+	<div class="container">
+		<div class="jumbotron">
+			<h3>Circle Detection v0.1.4</h3> 
+			<p>This is a prototype of Circle Detection</p> 
+		</div>
 
-			  	<div class="card-header">
-			    Original Image
-			  	</div>
-			  	<div class="card-block">
-				<canvas id="orgCanvas" width ="0" height = "0"></canvas>
-			    	 </div>
-				<div>
- 					<img id="imageOriginal" style="display: none;" />
-				</div>
-				<div>
-				<canvas id="inputCanvas" width ="0" height = "0"></canvas>
-				
-				</div>
-				<div> <label id="mouse_result"></label>  </div>			
-			  	<div class="card-footer text-muted">
-			    	<input type="file" id="imageInput" name="file" />
-			  	</div>
-			</div>
-  		</div>
-	        <div style="visibility: hidden">
-                        <div style="visibility: hidden">
-			  <div  style="visibility: hidden">
-                             <canvas id="debugCanvas" width="0" height="0"></canvas>
-	`
-                          </div>
+		<div class="row">
+		</div>
+		<div class="row">
+			<div class="col-sm">
+				<div class="card">
+					<div id="navbar">
+						<button type="button" onclick="Img_zoomin()"><img src="./images/zoomin.png" width="50%" height="50%"  /></button>
+						<button type="button" onclick="Img_zoomout()"><img src="./images/zoomout.png" width="50%" height="50%" /></button>
+					</div>
 
-			</div>
-  	 	</div>
-  		<div class="col-sm">
-  			<div class="card">
-			  	<div class="card-header">
-			    Modified Image
-			  	</div>
-			  	<div class="card-block">
-			    	<canvas id="imageCanvas" onclick="add_remove_circle(event)"></canvas>
-			  	</div>
+					<div class="card-header">
+						Original Image
+					</div>
+					<div class="card-block">
+						<canvas id="orgCanvas" width ="0" height = "0"></canvas>
+					</div>
+					<div>
+						<img id="imageOriginal" style="display: none;" />
+					</div>
+					<div>
+						<canvas id="inputCanvas" width ="0" height = "0"></canvas>
 
-			  	<ul class="list-group list-group-flush">
-			 	    <li class="list-group-item">
-                                        <button type="button" id="circlesButton" class="btn btn-primary">Circle Detection</button>
-                                        <label id="lbl_status">..</label>
-                                    </li>
-	
-			  		<div class="card">
-			  			<div class="card-header">
-			    			Add/Remove
-			  			</div>
-			  			<div class="card-block text-left">
-				  			<b>Radius</b>: <input type="text" id="txt_radius" value="20" size="3"><br>
-				  			<label >
-	  							<input type="radio" checked="checked" name="radio" id="rad_none">
-	  							<span >None</span>
-							</label>
-							<br>
-				  			<label >
-	  							<input type="radio" name="radio" id="rad_add">
-	  							<span >Add Circle</span>
-							</label>
-							<br>
-							<label >
-	  							<input type="radio" name="radio" id="rad_remove">
-	  							<span >Remove Circle</span>
-							</label>
-						</div>							
-			  		</div>
-			  		<div class="card">
-			  			<div class="card-header">
-			    			Parameters
-			  			</div>
-			  			<div class="card-block text-left">
-			  				<b>line width</b>:<input type="text" id="txt_linew" value="1" size="4"><br>
-  							<b>min dist</b>: <input type="text" id="txt_mindist" value="20" size="4"><br>
-			    				<b>Param1</b>: <input type="text" id="txt_param1" value="150" size="4" ><br>
-			    				<b>Param2</b>: <input type="text" id="txt_param2" value="15" size="4"><br>
-			    				<b>min Radius</b>: <input type="text" id="txt_minRas" value="15" size="4"><br>
-			    				<b>max Radius</b>: <input type="text" id="txt_maxRas" value="25" size="4"><br>
-							<input type="checkbox" id="Chk_Resize"><b>Scale Image</b> 
-							<b>Scale (0.1-1.0)</b>: <input type="text" id="txt_Scale" value="0.5" size="4"><br>
-
-			  			</div>
-			  		</div
-					<div class="card">
-                                                <div class="card-header">
-                                                Output Display
-                                                </div>
-                                                <div class="card-block text-left">
-                                                        <b>Font Size</b>:<input type="text" id="txt_disp_fontsize" value="0.6" size="4"><br>
-                                                        <b>Comment Text</b>: <input type="text" id="txt_Comment" value="" size="50"><br>
-                                                </div>
-                                        </div>
-
-
-				</ul>
-				<div class="card-footer">
-				    <a href="#" id="button">Download</a>
+					</div>
+					<div> <label id="mouse_result"></label>  </div>			
+					<div class="card-footer text-muted">
+						<input type="file" id="imageInput" name="file" />
+					</div>
 				</div>
 			</div>
-  		</div>
-  	</div>
-</div>
-<div class="modal"></div>
+			<div style="visibility: hidden">
+				<div style="visibility: hidden">
+					<div  style="visibility: hidden">
+						<canvas id="debugCanvas" width="0" height="0"></canvas>
+					</div>
 
-<script async src="https://docs.opencv.org/master/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
+				</div>
+			</div>
+			<div class="col-sm">
+				<div class="card">
+					<div class="card-header">
+						Modified Image
+					</div>
+					<div class="card-block">
 
-<script src="js/circle.js"></script>
+						<canvas id="imageCanvas_header"></canvas><br>
+						<canvas id="imageCanvas" onclick="add_remove_circle(event)"></canvas>
+					</div>
 
-</body>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">
+							<button type="button" id="circlesButton" class="btn btn-primary">Circle Detection</button>
+							<label id="lbl_status">..</label>
+						</li>
+
+						<div class="card">
+							<div class="card-header">
+								Add/Remove
+							</div>
+							<div class="card-block text-left">
+								<b>Radius</b>: <input type="text" id="txt_radius" value="20" size="3"><br>
+								<label >
+									<input type="radio" checked="checked" name="radio" id="rad_none">
+									<span >None</span>
+								</label>
+								<br>
+								<label >
+									<input type="radio" name="radio" id="rad_add">
+									<span >Add Circle</span>
+								</label>
+								<br>
+								<label >
+									<input type="radio" name="radio" id="rad_remove">
+									<span >Remove Circle</span>
+								</label>
+							</div>							
+						</div>
+						<div class="card">
+							<div class="card-header">
+								Parameters
+							</div>
+							<div class="card-block text-left">
+								<b>line width</b>:<input type="text" id="txt_linew" value="1" size="4"><br>
+								<b>min dist</b>: <input type="text" id="txt_mindist" value="20" size="4"><br>
+								<b>Param1</b>: <input type="text" id="txt_param1" value="150" size="4" ><br>
+								<b>Param2</b>: <input type="text" id="txt_param2" value="15" size="4"><br>
+								<b>min Radius</b>: <input type="text" id="txt_minRas" value="15" size="4"><br>
+								<b>max Radius</b>: <input type="text" id="txt_maxRas" value="25" size="4"><br>
+								<input type="checkbox" id="Chk_Resize"><b>Scale Image</b> 
+								<b>Scale (0.1-1.0)</b>: <input type="text" id="txt_Scale" value="0.5" size="4"><br>
+
+							</div>
+							</div
+							<div class="card">
+								<div class="card-header">
+									Output Display
+								</div>
+								<div class="card-block text-left">
+									<b>Font Size</b>:<input type="text" id="txt_disp_fontsize" value="15" size="4"><br>
+									<b>Comment Text</b>: <input type="text" id="txt_Comment" value="" size="50"><br>
+								</div>
+							</div>
+
+
+						</ul>
+						<div class="card-footer">
+							<a href="#" id="button">Download</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal"></div>
+
+		<script async src="https://docs.opencv.org/master/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
+
+		<script src="js/circle.js"></script>
+
+	</body>
 </html>
