add combine canvas - downlaod

--- a/circle/html/index.html
+++ b/circle/html/index.html
@@ -93,7 +93,10 @@ body.loading .modal {
 					<div class="card-block">
 
 						<canvas id="imageCanvas_header"></canvas><br>
-						<canvas id="imageCanvas" onclick="add_remove_circle(event)"></canvas>
+						<canvas id="imageCanvas" onclick="add_remove_circle(event)"></canvas><br>
+						
+						<canvas id="imageCanvas_combine"></canvas><br>
+
 					</div>
 
 					<ul class="list-group list-group-flush">
