--- a/circle/html/index.html
+++ b/circle/html/index.html
@@ -75,9 +75,9 @@ body.loading .modal {
 					</div>
 				</div>
 			</div>
-			<div style="visibility: hidden">
-				<div style="visibility: hidden">
-					<div  style="visibility: hidden">
+			<div style="visibility: hidden;">
+				<div style="visibility: hidden;">
+					<div  style="visibility: hidden;">
 						<canvas id="debugCanvas" width="0" height="0"></canvas>
 					</div>
 
@@ -169,13 +169,21 @@ body.loading .modal {
 										<td><input type="text" id="txt_maxRas" value="25" size="4" onchange="maxRas_txtChange(this.value)"><input type="range" min="1" max="100" value="25" class="slider" id="rangeMaxRas">
 										</td>
 									</tr>
+									</tr>
+
 									<tr style="visibility: hidden">
 										<td><input type="checkbox" id="Chk_Resize"><b>Scale Image</b> 
 								<b><br>Scale (0.1-1.0)</b></td>
 										<td><input type="text" id="txt_Scale" value="0.5" size="4"></td>
-									</tr>
+									
 
 								</table>
+								<table>
+									<tr><td><button type="button" id="circlesButton2" class="btn btn-primary">Circle Detection</button>
+										<label id="lbl_status2">..</label></td></tr>
+
+								</table>
+								
 
 							</div>
 							</div
