add supportting camera on mobile

--- a/circle/html/index.html
+++ b/circle/html/index.html
@@ -71,8 +71,11 @@ body.loading .modal {
 					</div>
 					<div> <label id="mouse_result"></label>  </div>			
 					<div class="card-footer text-muted">
-						<input type="file" id="imageInput" name="file" />
+						<input type="file" id="imageInput" name="file" accept="image/*" >
+						
 					</div>
+
+
 				</div>
 			</div>
 			<div style="visibility: hidden;">
